# deXFG

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
mm2src/adex_cli/: Cargo.toml  README.md
mm2src/adex_cli/src/: adex_app.rs  adex_config.rs  cli.rs  helpers.rs  logging.rs  main.rs  rpc_data.rs  transport.rs
mm2src/coins/: AGENTS.md  Cargo.toml  coin_balance.rs  coin_errors.rs  eth.rs  lightning.rs  lp_coins.rs  lp_price.rs  my_tx_history_v2.rs  nft.rs  qrc20.rs  siacoin.rs  test_coin.rs  tx_fee_details.rs  utxo.rs  watcher_common.rs  z_coin.rs
mm2src/coins/eth/: chain_address.rs  chain_rpc.rs  erc20.rs  erc20_abi.json  eth_balance_events.rs  eth_hd_wallet.rs  eth_rpc.rs  eth_tests.rs  eth_utils.rs  eth_wasm_tests.rs  eth_withdraw.rs  for_tests.rs  maker_swap_v2_abi.json  nft_maker_swap_v2_abi.json  nft_swap_contract_abi.json  swap_contract_abi.json  taker_swap_v2_abi.json  tron.rs  v2_activation.rs  wallet_connect.rs
mm2src/coins/for_tests/: DOC_HD_tx_history_fixtures.json  RICK_HEADERS.json
mm2src/coins/hd_wallet/: account_ops.rs  address_ops.rs  coin_ops.rs  confirm_address.rs  errors.rs  mod.rs  pubkey.rs  wallet_ops.rs  withdraw_ops.rs
mm2src/coins/lightning/: ln_conf.rs  ln_db.rs  ln_errors.rs  ln_events.rs  ln_filesystem_persister.rs  ln_p2p.rs  ln_platform.rs  ln_serialization.rs  ln_sql.rs  ln_storage.rs  ln_utils.rs
mm2src/coins/nft/: nft_errors.rs  nft_structs.rs  nft_tests.rs
mm2src/coins/qrc20/: history.rs  qrc20_tests.rs  rpc_clients.rs  script_pubkey.rs  swap.rs
mm2src/coins/rpc_command/: account_balance.rs  consolidate_utxos.rs  fetch_utxos.rs  get_current_mtp.rs  get_enabled_coins.rs  get_new_address.rs  hd_account_balance_rpc_error.rs  init_account_balance.rs  init_create_account.rs  init_scan_for_new_addresses.rs  init_withdraw.rs  mod.rs  offline_keys.rs
mm2src/coins/siacoin/: error.rs  sia_hd_wallet.rs  sia_withdraw.rs
mm2src/coins/solana/: mod.rs  rpc_client.rs  solana_coin.rs  solana_token.rs
mm2src/coins/tendermint/: ethermint_account.rs  mod.rs  tendermint_balance_events.rs  tendermint_coin.rs  tendermint_token.rs  tendermint_tx_history_v2.rs  wallet_connect.rs
mm2src/coins/tx_history_storage/: mod.rs  sql_tx_history_storage_v2.rs  tx_history_v2_tests.rs
mm2src/coins/utxo/: bch.rs  bchd_grpc.rs  pb.rs  qtum.rs  qtum_delegation.rs  rpc_clients.rs  slp.rs  spv.rs  swap_proto_v2_scripts.rs  tx_history_events.rs  utxo_balance_events.rs  utxo_common.rs  utxo_common_tests.rs  utxo_hd_wallet.rs  utxo_standard.rs  utxo_tests.rs  utxo_tx_history_v2.rs  utxo_wasm_tests.rs  utxo_withdraw.rs  wallet_connect.rs
mm2src/coins/utxo_signer/: Cargo.toml
mm2src/coins/z_coin/: compact_formats.proto  service.proto  storage.rs  tx_history_events.rs  z_balance_streaming.rs  z_coin_errors.rs  z_htlc.rs  z_rpc.rs  z_tx_history.rs  z_unit_tests.rs
mm2src/coins_activation/: AGENTS.md  Cargo.toml
mm2src/coins_activation/src/: bch_with_tokens_activation.rs  context.rs  erc20_token_activation.rs  eth_with_token_activation.rs  init_erc20_token_activation.rs  init_token.rs  lib.rs  lightning_activation.rs  platform_coin_with_tokens.rs  prelude.rs  sia_coin_activation.rs  slp_token_activation.rs  solana_token_activation.rs  solana_with_assets.rs  tendermint_token_activation.rs  tendermint_with_assets_activation.rs  token.rs  z_coin_activation.rs
mm2src/common/: AGENTS.md  Cargo.toml  bool_as_int.rs  build.rs  common.rs  crash_reports.rs  custom_iter.rs  jsonrpc_client.rs  log.rs  notifier.rs  number_type_casting.rs  on_drop_callback.rs  password_policy.rs  seri.rs  wasm.rs  wio.rs
mm2src/common/custom_futures/: mod.rs  repeatable.rs  timeout.rs
mm2src/common/executor/: abort_on_drop.rs  mod.rs  native_executor.rs  spawner.rs  wasm_executor.rs
mm2src/common/log/: native_log.rs  wasm_log.rs
mm2src/common/shared_ref_counter/: Cargo.toml
mm2src/common/write_safe/: fmt.rs  io.rs  mod.rs
mm2src/crypto/: AGENTS.md  Cargo.toml
mm2src/crypto/src/: bip32_child.rs  crypto_ctx.rs  decrypt.rs  encrypt.rs  global_hd_ctx.rs  hw_client.rs  hw_ctx.rs  hw_error.rs  hw_rpc_task.rs  key_derivation.rs  lib.rs  metamask_ctx.rs  metamask_login.rs  mnemonic.rs  privkey.rs  secret_hash_algo.rs  shared_db_id.rs  slip21.rs  standard_hd_path.rs  xpub.rs
mm2src/db_common/: Cargo.toml
mm2src/db_common/src/: async_conn_tests.rs  async_sql_conn.rs  lib.rs  sql_condition.rs  sql_constraint.rs  sql_create.rs  sql_delete.rs  sql_insert.rs  sql_query.rs  sql_update.rs  sql_value.rs  sqlite.rs
mm2src/fuego_adaptor/: Cargo.toml  xfg_coin_config.json  xfg_coins_config_tcp.json
mm2src/fuego_adaptor/src/: fuegod_client.rs  lib.rs  swap.rs
mm2src/hw_common/: Cargo.toml
mm2src/kdf_walletconnect/: Cargo.toml
mm2src/kdf_walletconnect/src/: chain.rs  connection_handler.rs  error.rs  inbound_message.rs  lib.rs  metadata.rs  pairing.rs
mm2src/ledger/: Cargo.toml
mm2src/mm2_bin_lib/: AGENTS.md  Cargo.toml  build.rs
mm2src/mm2_bin_lib/src/: lib.rs  mm2_bin.rs  mm2_native_lib.rs  mm2_wasm_lib.rs
mm2src/mm2_core/: Cargo.toml
mm2src/mm2_core/src/: data_asker.rs  event_dispatcher.rs  lib.rs  mm_ctx.rs
mm2src/mm2_db/: Cargo.toml
mm2src/mm2_db/src/: lib.rs
mm2src/mm2_err_handle/: Cargo.toml
mm2src/mm2_err_handle/src/: common_errors.rs  discard_mm_trace.rs  lib.rs  map_mm_error.rs  map_to_mm.rs  map_to_mm_fut.rs  mm_error.rs  mm_json_error.rs  split_mm.rs
mm2src/mm2_eth/: Cargo.toml
mm2src/mm2_eth/src/: address.rs  eip712.rs  eip712_encode.rs  lib.rs  recovery.rs
mm2src/mm2_event_stream/: Cargo.toml
mm2src/mm2_event_stream/src/: configuration.rs  event.rs  lib.rs  manager.rs  (+2 more)
mm2src/mm2_git/: Cargo.toml
mm2src/mm2_gui_storage/: Cargo.toml
mm2src/mm2_io/: Cargo.toml
mm2src/mm2_main/: AGENTS.md  Cargo.toml  build.rs
mm2src/mm2_metamask/: Cargo.toml
mm2src/mm2_metrics/: Cargo.toml
mm2src/mm2_net/: Cargo.toml
mm2src/mm2_number/: Cargo.toml
mm2src/mm2_p2p/: AGENTS.md  Cargo.toml
mm2src/mm2_rpc/: Cargo.toml
mm2src/mm2_state_machine/: Cargo.toml
mm2src/mm2_test_helpers/: Cargo.toml
mm2src/proxy_signature/: Cargo.toml
(+592 files in other folders)
