[workspace]
# https://doc.rust-lang.org/beta/cargo/reference/features.html#feature-resolver-version-2
resolver = "2"
members = [
    "mm2src/fuego_adaptor",
    "mm2src/coins_activation",
    "mm2src/coins",
    "mm2src/coins/utxo_signer",
    "mm2src/common/shared_ref_counter",
    "mm2src/crypto",
    "mm2src/db_common",
    "mm2src/derives/enum_derives",
    "mm2src/derives/ser_error_derive",
    "mm2src/derives/ser_error",
    "mm2src/hw_common",
    "mm2src/kdf_walletconnect",
    "mm2src/mm2_bin_lib",
    "mm2src/mm2_bitcoin/chain",
    "mm2src/mm2_bitcoin/crypto",
    "mm2src/mm2_bitcoin/keys",
    "mm2src/mm2_bitcoin/primitives",
    "mm2src/mm2_bitcoin/rpc",
    "mm2src/mm2_bitcoin/script",
    "mm2src/mm2_bitcoin/serialization_derive",
    "mm2src/mm2_bitcoin/serialization",
    "mm2src/mm2_bitcoin/test_helpers",
    "mm2src/mm2_core",
    "mm2src/mm2_db",
    "mm2src/mm2_err_handle",
    "mm2src/mm2_eth",
    "mm2src/mm2_event_stream",
    "mm2src/mm2_git",
    "mm2src/mm2_gui_storage",
    "mm2src/mm2_io",
    "mm2src/mm2_main",
    "mm2src/mm2_metamask",
    "mm2src/mm2_metrics",
    "mm2src/mm2_net",
    "mm2src/mm2_number",
    "mm2src/mm2_p2p",
    "mm2src/mm2_rpc",
    "mm2src/mm2_state_machine",
    "mm2src/proxy_signature",
    "mm2src/rpc_task",
    "mm2src/trezor",
    "mm2src/trading_api",
]

exclude = [
    "mm2src/adex_cli",
    "mm2src/mm2_test_helpers",
]

[workspace.dependencies]
aes = "0.8.3"
argon2 = { version = "0.5.2", features = ["zeroize"] }
arrayref = "0.3"
anyhow = "1.0.89"
async-std = "1.5"
async-trait = "0.1.52"
async-stream = "0.3"
backtrace = "0.3"
base64 = "0.21.2"
bech32 = "0.9.1"
bs58 = "0.4.0"
bigdecimal = { version = "0.3", features = ["serde"] }
bip32 = { version = "0.2.2", default-features = false, features = ["alloc", "secp256k1-ffi"] }
bip39 = { version = "2.1.0", features = ["rand_core", "zeroize", "std"], default-features = false }
bitcoin = "0.29"
bitcoin_hashes = "0.11"
blake2 = "0.10.6"
blake2b_simd = "0.5.10"
bytes = "1.1"
byteorder = "1.3"
cbc = "0.1.2"
cc = "1.0"
cipher = "0.4.4"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
cfg-if = "1.0"
clap = { version = "4.5", default-features = false, features = ["derive", "std"] }
cosmrs = { version = "0.16", default-features = false }
crossbeam = "0.8"
crossbeam-channel = "0.5.1"
compatible-time = { version = "1.1.0", package = "web-time" }
crc32fast = { version = "1.3.2", features = ["std", "nightly"] }
derive_more = "0.99.20"
directories = "5.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
ed25519-dalek-bip32 = "0.3.0"
either = "1.6"
enum-primitive-derive = "0.2"
env_logger = { version = "0.11", default-features = false }
ethabi = "17.0.0"
ethcore-transaction = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
ethereum-types = { version = "0.13", default-features = false, features = ["std", "serialize"] }
ethkey = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
# Waiting for https://github.com/rust-lang/rust/issues/54725 to use on Stable.
#enum_dispatch = "0.1"
ff = "0.8"
findshlibs = "0.5"
# using select macro requires the crate to be named futures, compilation failed with futures03 name
futures = { version = "0.3.1", default-features = false }
futures01 = { version = "0.1", package = "futures" }
futures-rustls = { version = "0.24", default-features = false }
futures-ticker = "0.0.3"
futures-timer = "3.0"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
fnv = "1.0.6"
group = "0.8.0"
gstuff = { version = "0.7" }
hash256-std-hasher = "0.15.2"
hash-db = "0.15.2"
hex = "0.4.2"
hmac = "0.12.1"
hkdf = "0.12.4"
http = "0.2"
http-body = "0.4"
httparse = "1.8.0"
hyper = "0.14.26"
hyper-rustls = { version = "0.24", default-features = false }
indexmap = "1.7.0"
inquire = "0.6"
itertools = "0.10"
jemallocator = "0.5.0"
jubjub = "0.5.1"
js-sys = "0.3.27"
# Same version as `web3` depends on.
jsonrpc-core = "18.0.0"
lazy_static = "1.4"
libc = "0.2"
libp2p = { git = "https://github.com/KomodoPlatform/rust-libp2p.git", tag = "k-0.52.12", default-features = false }
lightning = "0.0.113"
lightning-background-processor = "0.0.113"
lightning-invoice = { version = "0.21.0", features = ["serde"] }
lightning-net-tokio = "0.0.113"
log = "0.4"
metrics = "0.21"
metrics-exporter-prometheus = "0.12.1"
metrics-util = "0.15"
mocktopus = "0.8.0"
nom = "6.1.2"
num-bigint = { version = "0.4", features = ["serde", "std"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
pairing_api = { git = "https://github.com/komodoplatform/walletconnectrust", tag = "k-0.1.3" }
parking_lot = { version = "0.12.0", default-features = false }
parking_lot_core = { version = "0.9", features = ["nightly"] }
passwords = "3.1"
paste = "1.0"
pin-project = "1.1.2"
primitive-types = "0.11.1"
prost = "0.12"
prost-build = { version = "0.12", default-features = false }
protobuf = "2.20"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1"
relay_client = { git = "https://github.com/komodoplatform/walletconnectrust", tag = "k-0.1.3" }
relay_rpc = { git = "https://github.com/komodoplatform/walletconnectrust", tag = "k-0.1.3" }
reqwest = { version = "0.11.9", default-features = false }
rand = { version = "0.7", default-features = false, features = ["std", "small_rng", "wasm-bindgen"] }
rcgen = "0.10"
ripemd160 = "0.9.0"
rlp = "0.5"
rmp-serde = "0.14.3"
rusb = { version = "0.7.0", features = ["vendored"] }
rustc-hash = "2.0"
rustc-hex = "2"
rust-ini = "0.13"
rustls = { version = "0.21", default-features = false }
rustls-pemfile = "1.0.2"
rusqlite = { version = "0.28", features = ["bundled"] }
secp256k1 = "0.20"
secp256k1v24 = { version = "0.24", package = "secp256k1" }
serde = { version = "1", default-features = false }
serde_bytes = "0.11.5"
serde_derive = { version = "1", default-features = false }
serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
serde_with = "3.14.1"
serde_repr = "0.1.6"
serde-wasm-bindgen = "0.4.3"
sha-1 = "0.9"
sha2 = "0.10"
sha3 = "0.9"
sia-rust = { git = "https://github.com/KomodoPlatform/sia-rust", branch = "refactor/rc-cleanup"}
siphasher = "0.1.1"
smallvec = "1.6.1"
sp-runtime-interface = { version = "6.0.0", default-features = false, features = ["disable_target_static_assertions"] }
sp-trie = { version = "6.0", default-features = false }
sql-builder = "3.1.1"
syn = "1.0"
sysinfo = "0.28"
tempfile = "3.7.1"
# using the same version as cosmrs
tendermint-rpc = { version = "0.35", default-features = false }
# Todo: now that toolchain is updated, maybe this can be updated more and used with Sia tests
testcontainers = "0.17.0"
tiny-bip39 = "0.8.0"
thiserror = "1.0.40"
time = "0.3.36"
timed-map = { version = "1.5", features = ["rustc-hash", "serde", "wasm"] }
tokio = { version = "1.47",  default-features = false }
tokio-rustls = { version = "0.24", default-features = false }
tokio-tungstenite-wasm = { git = "https://github.com/KomodoPlatform/tokio-tungstenite-wasm", rev = "8fc7e2f", default-features = false }
tonic = { version = "0.10", default-features = false }
tonic-build = { version = "0.10", default-features = false, features = ["prost"] }
tower-service = "0.3"
trie-db = { version = "0.23.1", default-features = false }
trie-root = "0.16.0"
url = { version = "2.2.2", features = ["serde"] }
uint = "0.9.3"
uuid = { version = "1.2.2", features = ["fast-rng", "serde", "v4"] }
void = "1.0"
wagyu-zcash-parameters = { version = "0.2" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-test = "0.3.50"
wc_common = { git = "https://github.com/komodoplatform/walletconnectrust", tag = "k-0.1.3" }
webpki-roots = "0.25"
web-sys = {version = "0.3.55", default-features = false }
# we don't need the default web3 features at all since we added our own web3 transport using shared httparse.workspace = true instance.
# one of web3 dependencies is the old `tokio-uds 0.1.7` which fails cross-compiling to arm.
# we don't need the default web3 features at all since we added our own web3 transport using shared hyper instance.
web3 = { git = "https://github.com/komodoplatform/rust-web3", tag = "v0.20.0", default-features = false }
winapi = "0.3"
zbase32 = "0.1.2"
zcash_client_backend = { git = "https://github.com/komodoplatform/librustzcash.git", tag = "k-1.4.2" }
zcash_client_sqlite = { git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.2" }
zcash_extras = { git = "https://github.com/komodoplatform/librustzcash.git", tag = "k-1.4.2" }
zcash_primitives =  { git = "https://github.com/komodoplatform/librustzcash.git", tag = "k-1.4.2", features = ["transparent-inputs"] }
zcash_proofs = { git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.2", default-features = false }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[profile.release]
debug = 0
debug-assertions = false
opt-level = 3
strip = true
codegen-units = 1
# lto = true
panic = 'unwind'

[profile.dev]
opt-level = 0
debug = 1
debug-assertions = false # TODO: Enable debug-assertions in the future
panic = 'unwind'
incremental = true # TODO: this is probably wasting resources in Github Actions, `CARGO_INCREMENTAL` can be used there
codegen-units = 256


[profile.release.package.mocktopus]
opt-level = 1 # TODO: MIR fails on optimizing this dependency, remove that..
