[package]
name = "adex-cli"
version = "0.1.0"
edition = "2021"
authors = ["Rozhkov Dmitrii <rozhkov@komodoplatform.com>"]
description = "Provides a CLI interface and facilitates interoperating to komodo atomic dex through the mm2 service"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = { workspace = true, features  = ["std"] }
async-trait.workspace = true
clap.workspace = true
common = { path = "../common" }
derive_more.workspace = true
directories.workspace = true
env_logger.workspace = true
http.workspace = true
hyper = { workspace = true, features = ["client", "http2", "tcp"] }
hyper-rustls.workspace = true
stuff.workspace = true 
inquire.workspace = true
itertools.workspace = true
log.workspace = true
mm2_net = { path = "../mm2_net" }
mm2_number = { path = "../mm2_number" }
mm2_rpc = { path = "../mm2_rpc"}
mm2_core = { path = "../mm2_core" }
passwords.workspace = true
rpc = { path = "../mm2_bitcoin/rpc" }
rustls = { workspace = true, features = [ "dangerous_configuration" ] }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }
sysinfo.workspace = true
tiny-bip39.workspace = true
tokio = { workspace = true, features = [ "macros" ] }
uuid.workspace = true 

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["processthreadsapi", "winnt"] }

