[package]
name = "db_common"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
common = { path = "../common" }
hex.workspace = true
log.workspace = true
uuid.workspace = true 

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-channel.workspace = true 
futures.workspace = true
rusqlite.workspace = true
sql-builder.workspace = true
tokio = { workspace = true, default-features = false, features = ["macros"] }
