[package]
name = "fuego_adaptor"
version = "0.1.0"
edition = "2021"
description = "Adaptor signature protocol for Fuego DEX — Schnorr adaptor sigs on secp256k1"

[dependencies]
secp256k1_029 = { package = "secp256k1", version = "0.29", features = ["rand", "hashes", "global-context"] }
num-bigint = { workspace = true }
num-traits = { workspace = true }
hex = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["rt", "macros"] }
log = { workspace = true }

[dev-dependencies]
rand = "0.8"
