[package]
name = "hw_common"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
async-trait.workspace = true
bip32.workspace = true
common = { path = "../common" }
mm2_err_handle = { path = "../mm2_err_handle" }
derive_more.workspace = true
futures = { workspace = true, features = ["compat", "async-await"] }
secp256k1 = { workspace = true, features = ["rand"] }
serde.workspace = true
serde_derive.workspace = true

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
rusb.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen-test.workspace = true
web-sys = { workspace = true, features = ["console", "Navigator", "Usb", "UsbDevice", "UsbDeviceRequestOptions", "UsbInTransferResult"] }
