[package]
name = "mm2_event_stream"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
cfg-if.workspace = true
common = { path = "../common" }
futures.workspace = true
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-test.workspace = true
