[package]
name = "mm2_gui_storage"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-trait.workspace = true
common = { path = "../common" }
db_common = { path = "../db_common" }
derive_more.workspace = true
mm2_core = { path = "../mm2_core" }
mm2_err_handle = { path = "../mm2_err_handle" }
mm2_number = { path = "../mm2_number" }
rpc = { path = "../mm2_bitcoin/rpc" }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }
serde_repr.workspace = true
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
mm2_db = { path = "../mm2_db" }
mm2_test_helpers = { path = "../mm2_test_helpers" }
wasm-bindgen-test.workspace = true

[dev-dependencies]
mm2_test_helpers = { path = "../mm2_test_helpers" }
