[package]
name = "mm2_io"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
async-std = { workspace = true, features = ["unstable"] }
common = { path = "../common" }
gstuff.workspace = true
mm2_err_handle = { path = "../mm2_err_handle" }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }
rand.workspace = true 
futures = { workspace = true, features = ["compat", "async-await", "thread-pool"] }
derive_more.workspace = true
